--- a/css/app.css
+++ b/css/app.css
@@ -135,6 +135,7 @@ h1 {
     padding: 20px;
     border: 1px solid #888;
     width: 16%;
+    text-align: center;
   }
   
   /* The Close Button */
@@ -151,3 +152,18 @@ h1 {
     text-decoration: none;
     cursor: pointer;
   }
+
+  .play-again-button{
+    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+    width: 124px;
+    height: 40px;
+    margin: 0 auto;
+    text-align: center;
+    color: white;
+    border-radius: 19px;
+    font-size: 15px;
+  }
+
+  .play-again-button:hover{
+      cursor: pointer;
+  }  
